service.yml
apiVersion: v1
kind: Service
metadata:
  name: sahar-service
  labels:
    app: sahar-app
spec:
  type: NodePort
  ports:
  - port: 80
    targetPort: 5000
    nodePort: 30080
    protocol: TCP
  selector:
    app: sahar-app
